2nd training/Community/Community/Community1/force-app/main/default/objects/sap_api__c/sap_api__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>SAP API</label>
</CustomObject>