2nd training/Community/Community/Community1/force-app/main/default/objects/sap_api__c/fields/Cache_Control__c.field-meta.xml
<CustomField>
    <fullName>Cache_Control__c</fullName>
    <label>Cache-Control</label>
    <length>30</length>
    <type>Text</type>
</CustomField>