2nd training/Community/Community/Community1/force-app/main/default/objects/sap_api__c/fields/Client_Id__c.field-meta.xml
<CustomField>
    <fullName>Client_Id__c</fullName>
    <label>Client_Id</label>
    <length>25</length>
    <type>Text</type>
</CustomField>