2nd training/Community/Community/Community1/force-app/main/default/objects/sap_api__c/fields/Client_Secret__c.field-meta.xml
<CustomField>
    <fullName>Client_Secret__c</fullName>
    <label>Client_Secret</label>
    <length>100</length>
    <type>Text</type>
</CustomField>