2nd training/Community/Community/Community1/force-app/main/default/objects/sap_api__c/fields/X_Api_Key__c.field-meta.xml
<CustomField>
    <fullName>X_Api_Key__c</fullName>
    <label>X-Api-Key</label>
    <length>50</length>
    <type>Text</type>
</CustomField>